[project]
name = "ragpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "databricks-vectorsearch>=0.67",
    "fastapi[standard]>=0.136.1",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.2",
    "ollama>=0.6.2",
    "pandas>=3.0.2",
    "pypdf>=6.10.2",
    "pypdfium2>=5.8.0",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.57.0",
]
