[project]
name = "databricks-ragpy"
version = "0.1.0"
description = "RAG library for Databricks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databricks-vectorsearch>=0.67",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.10.2",
    "pypdfium2>=5.8.0",
    "sentence-transformers>=5.4.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.hatch.build.targets.wheel]
packages = ["ragpy_modules"]